# fastapi-novel-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  chapters.py  novels.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  chapter.py  novel.py  user.py
app/schemas/: __init__.py  chapter.py  novel.py  user.py
app/services/: __init__.py  auth.py  chapter.py  novel.py
